Fixed overflow bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
     z-index: 1;
 }
 
+.slide {
+    overflow: hidden;
+}
+
 .object {
     z-index: 2;
 }
@@ -38,6 +42,7 @@ body {
     padding: 0;
     font-size: 20pt;
     z-index: 5;
+    width: 90%;
     position: absolute;
 }
 
